--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
    "scripts": {
       "dev": "ts-node-dev src/index.ts",
       "start": "tsc && node ./build/index.js",
-      "migrations": "tsc && node ./build/database/migrations.js"
+      "migrations": "tsc && node ./build/database/migrations.js",
+      "build": "tsc"
    },
    "keywords": [],
    "author": "",
