--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "knex": "^2.4.2",
-    "mysql": "^2.18.1",
+    "mysql2": "^2.18.1",
     "uuid": "^9.0.0",
     "typescript": "^4.9.4"
    },
