--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
    "author": "",
    "license": "ISC",
    "dependencies": {
-   "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "knex": "^2.4.2",
-    "mysql2": "^2.18.1",
-    "uuid": "^9.0.0",
-    "typescript": "^4.9.4"
+      "cors": "^2.8.5",
+      "dotenv": "^16.0.3",
+      "express": "^4.18.2",
+      "knex": "^2.4.2",
+      "mysql2": "^3.1.0",
+      "typescript": "^4.9.4",
+      "uuid": "^9.0.0"
    },
    "devDependencies": {
       "@types/cors": "^2.8.12",
