--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
       "dotenv": "^16.0.3",
       "express": "^4.18.2",
       "knex": "^2.4.2",
-      "mysql2": "^3.1.0",
+      "mysql": "^2.18.1",
       "typescript": "^4.9.4",
       "uuid": "^9.0.0"
    },
