--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
    "main": "index.js",
    "scripts": {
       "start": "tsc && node ./build/index.js",
-      "dev": "ts-node-dev --inspect --transpile-only src/index.ts",
+      "dev": "ts-node-dev src/index.ts",
       "migrations": "tsc && node ./build/database/migrations.js"
    },
    "keywords": [],
