--- a/package.json
+++ b/package.json
@@ -12,17 +12,21 @@
    "author": "",
    "license": "ISC",
    "dependencies": {
+      "bcrypt": "^5.1.0",
       "cors": "^2.8.5",
       "dotenv": "^16.0.3",
       "express": "^4.18.2",
+      "jsonwebtoken": "^9.0.0",
       "knex": "^2.4.2",
       "mysql": "^2.18.1",
       "typescript": "^4.9.4",
       "uuid": "^9.0.0"
    },
    "devDependencies": {
+      "@types/bcrypt": "^5.0.0",
       "@types/cors": "^2.8.12",
       "@types/express": "^4.17.13",
+      "@types/jsonwebtoken": "^9.0.1",
       "@types/knex": "^0.16.1",
       "@types/node": "^18.0.6",
       "@types/uuid": "^9.0.0",
